--- a/jobs/prepare-repos/Jenkinsfile
+++ b/jobs/prepare-repos/Jenkinsfile
@@ -498,7 +498,7 @@ RPM_VERSION  : ${version['version']}-${version['release']}
 node(TARGET_NODE) {
     checkout scm
 
-    ose_repo = GitRepository('openshift', 'ose')
+    ose_repo = new GitRepository('openshift', 'ose')
     ose_repo.load_oauth_token(GITHUB_TOKEN_FILENAME)
     
     token_file_name = GITHUB_TOKEN_FILENAME
