start creating GitRepository class

--- a/jobs/prepare-repos/Jenkinsfile
+++ b/jobs/prepare-repos/Jenkinsfile
@@ -96,7 +96,7 @@ class GitRepository {
     // Read a string from a file.  The string should be an OAuth token for access to a Github account
     // @param token_file - a file containing a single OAuth token string
     // @return - a string containing the OAuth token
-    def read_oauth_token(token_file) {
+    def load_oauth_token(token_file) {
         token_string = sh (
             returnStdout: true,
             script: "cat ${token_file}"
