--- a/jobs/prepare-repos/Jenkinsfile
+++ b/jobs/prepare-repos/Jenkinsfile
@@ -97,7 +97,7 @@ class GitRepository {
     // @param token_file - a file containing a single OAuth token string
     // @return - a string containing the OAuth token
     private static String read_oauth_token(token_file) {
-        token_string = script.sh (
+        def token_string = script.sh (
             returnStdout: true,
             script: "cat ${token_file}"
         ).trim()
