--- a/jobs/prepare-repos/Jenkinsfile
+++ b/jobs/prepare-repos/Jenkinsfile
@@ -93,22 +93,6 @@ class GitRepository {
         return "git@github.com:${this.owner}/${this.project}"
     }
 
-    // Read a string from a file.  The string should be an OAuth token for access to a Github account
-    // @param token_file - a file containing a single OAuth token string
-    // @return - a string containing the OAuth token
-    public static String read_oauth_token(token_file) {
-        def token_string = script.sh (
-            returnStdout: true,
-            script: "cat ${token_file}"
-        ).trim()
-
-        return token_string
-    }
-
-    def load_oauth_token(token_file) {
-        this.oath_token = read_oauth_token(token_file)
-    }
-
     /**
      * Retrive the branch list from a remote repository
      * @param repo_url a git@ repository URL.
@@ -502,8 +486,8 @@ RPM_VERSION  : ${version['version']}-${version['release']}
 node(TARGET_NODE) {
     checkout scm
 
-    ose_repo = new GitRepository('openshift', 'ose')
-    ose_repo.load_oauth_token(GITHUB_TOKEN_FILENAME)
+    //ose_repo = new GitRepository('openshift', 'ose')
+    //ose_repo.load_oauth_token(GITHUB_TOKEN_FILENAME)
     
     token_file_name = GITHUB_TOKEN_FILENAME
     github_token = read_oauth_token(token_file_name)
