start creating GitRepository class

--- a/jobs/prepare-repos/Jenkinsfile
+++ b/jobs/prepare-repos/Jenkinsfile
@@ -487,6 +487,7 @@ node(TARGET_NODE) {
     checkout scm
 
     ose_repo = new GitRepository('openshift', 'ose')
+    ose_repo.set_oauth_token(read_oauth_token((GITHUB_TOKEN_FILE))
     //ose_repo.load_oauth_token(GITHUB_TOKEN_FILENAME)
     
     token_file_name = GITHUB_TOKEN_FILENAME
