--- a/jobs/prepare-repos/Jenkinsfile
+++ b/jobs/prepare-repos/Jenkinsfile
@@ -127,9 +127,9 @@ class GitRepository {
 
         repo_url = this.http_url()
         
-        branch_text = script.sh(
+        branch_text = Script.environment.sh(
             returnStdout: true,
-            Script.environment.sh: [
+            script [
                 "git ls-remote ${repo_url} ${pattern}",
                 "awk '{print \$2}'",
                 "cut -d/ -f3"
@@ -160,7 +160,7 @@ class GitRepository {
         accept_header = "Accept: application/vnd.github.v3.raw"
 
         query = "curl --silent -H '${auth_header}' -H '${accept_header}' -L ${file_url}"
-        content = script.sh(
+        content = Script.environment.sh(
 	          returnStdout: true,
             script: query
         )
