--- a/jobs/prepare-repos/Jenkinsfile
+++ b/jobs/prepare-repos/Jenkinsfile
@@ -511,6 +511,8 @@ node(TARGET_NODE) {
     
     ose_repo = new GitRepository('openshift', 'ose')
     ose_repo.set_oauth_token(read_oauth_token(GITHUB_TOKEN_FILENAME))
+    echo "token: ${ose_repo.oauth_token}"
+
     //ose_repo.load_oauth_token(GITHUB_TOKEN_FILENAME)
     
     token_file_name = GITHUB_TOKEN_FILENAME
