start creating GitRepository class

--- a/jobs/prepare-repos/Jenkinsfile
+++ b/jobs/prepare-repos/Jenkinsfile
@@ -98,7 +98,7 @@ class GitRepository {
             returnStdout: true,
             script: "cat ${token_file}"
         ).trim()
-        return token_string
+        this.oauth_token = return token_string
     }
 
     def set_oauth_token(token) {
