--- a/jobs/prepare-repos/Jenkinsfile
+++ b/jobs/prepare-repos/Jenkinsfile
@@ -508,12 +508,10 @@ node(TARGET_NODE) {
     checkout scm
     
     ose_repo = new GitRepository('openshift', 'ose')
-    //ose_repo.set_oauth_token(read_oauth_token(GITHUB_TOKEN_FILENAME))
     ose_repo.read_oauth_token(GITHUB_TOKEN_FILENAME)
-    echo "token: ${ose_repo.oauth_token}"
-    
-    token_file_name = GITHUB_TOKEN_FILENAME
-    github_token = read_oauth_token(token_file_name)
+
+    //token_file_name = GITHUB_TOKEN_FILENAME
+    //github_token = read_oauth_token(token_file_name)
     //
     // Given a version number to build, determmine how to configure the
     // local git workspacexz
@@ -521,14 +519,13 @@ node(TARGET_NODE) {
     stage("survey") {
         echo "BEGIN STAGE: survey"
 
-        if (github_token == "") {
-            error("failed to read file $token_file_name")
-        }
+        //if (github_token == "") {
+        //    error("failed to read file $token_file_name")
+        //}
 
         // 
-        master_rpm_spec = get_single_file(
-            GITHUB_OWNER, 'ose', 'origin.spec', github_token
-        )
+        master_rpm_spec = ose_repo.get_single_file('origin.spec')
+
         master_version = extract_rpm_version(master_rpm_spec)
         //master_release = extract_rpm_release(master_rpm_spec)
         
