start creating GitRepository class

--- a/jobs/prepare-repos/Jenkinsfile
+++ b/jobs/prepare-repos/Jenkinsfile
@@ -556,9 +556,8 @@ node(TARGET_NODE) {
         
         // define new version/release for openshift packages
 
-        branch_rpm_spec = get_single_file(
-            GITHUB_OWNER, 'ose', 'origin.spec', github_token, remote_branch_names['origin']
-        )
+        branch_rpm_spec = ose_repo.get_single_file(
+            'origin.spec', remote_branch_names['origin'])
         branch_version = extract_rpm_version(branch_rpm_spec)
         branch_release = extract_rpm_release(branch_rpm_spec)
         //branch_major_minor = major_minor(branch_version)
