--- a/jobs/prepare-repos/Jenkinsfile
+++ b/jobs/prepare-repos/Jenkinsfile
@@ -140,6 +140,25 @@ class GitRepository {
     }
 
     /**
+     * Retrive a list of release numbers from the OCP remote repository
+     * @param repo_url a git@ repository URL.
+     * @return a list of OSE release numbers.
+     *
+     * Get the branch names beginning with 'enterprise-'.
+     * Extract the release number string from each branch release name
+     * Sort in version order (compare fields as integers, not strings)
+     * Requires SSH_AGENT to have set a key for access to the remote repository
+     */
+    def get_releases(branch_pattern='enterprise-*') {
+        // too clever: chain - get branch names, remove prefix, suffix
+        def branches = get_remote_branches(branch_pattern)
+        def r = branches.collect { it - 'enterprise-' }.findAll { it =~ /^\d+((\.\d+)*)$/ }
+        // and sort
+        def z = sort_versions(r)
+        return z
+    }
+
+    /**
      * Retrieve a single file from a Github repository
      * @param owner
      * @param repo_name
@@ -514,7 +533,7 @@ node(TARGET_NODE) {
         echo "Build mode: ${mode}"
 
         // define build branches for origin and upstream remotes
-        remote_branch_names = get_branch_names(mode, BUILD_VERSION)
+        remote_branch_names = ose_repo.get_branch_names(mode, BUILD_VERSION)
         echo "Branch Names: ${remote_branch_names}"
         
         // define new version/release for openshift packages
