--- a/jobs/prepare-repos/Jenkinsfile
+++ b/jobs/prepare-repos/Jenkinsfile
@@ -80,6 +80,16 @@ public class Script {
     public static environment
 }
 
+class VersionString {
+
+    VersionString(version, release) {
+        this.version = version
+        this.release = release
+    }g
+}
+
+
+
 class GitRepository {
     String owner
     String project
@@ -90,9 +100,9 @@ class GitRepository {
         this.project = project
     }
 
-    // Read a string from a file.  The string should be an OAuth token for access to a Github account
+    // Read a string from a file.
+    // The string should be an OAuth token for access to a Github account
     // @param token_file - a file containing a single OAuth token string
-    // @return - a string containing the OAuth token
     def read_oauth_token(token_file) {
         def token_string = Script.environment.sh (
             returnStdout: true,
@@ -100,11 +110,6 @@ class GitRepository {
         ).trim()
         this.oauth_token = token_string
     }
-
-    def set_oauth_token(token) {
-        this.oauth_token = token
-    }
-
     
     def http_url() {
         return "https://github.com/${this.owner}/${this.project}"
@@ -209,48 +214,6 @@ def extract_rpm_release(spec_content) {
         error( "Unable to extract Release field from RPM spec" )
     }
     return rel_matcher[0][1]
-}
-
-/**
- * Retrive the branch list from a remote repository
- * @param repo_url a git@ repository URL.
- * @param pattern a matching pattern for the branch list. Only return matching branches
- *
- * @return a list of branch names.  Removes the leading ref path
- *
- * Requires SSH_AGENT to have set a key for access to the remote repository
- */
-def get_remote_branches(repo_url, pattern="") {
-
-    branch_text = sh(
-        returnStdout: true,
-        script: [
-            "git ls-remote ${repo_url} ${pattern}",
-            "awk '{print \$2}'",
-            "cut -d/ -f3"
-        ].join(" | ")
-    ).trim()
-
-    return branch_text.split()
-}
-
-/**
- * Retrive a list of release numbers from the OCP remote repository
- * @param repo_url a git@ repository URL.
- * @return a list of OSE release numbers.
- *
- * Get the branch names beginning with 'enterprise-'.
- * Extract the release number string from each branch release name
- * Sort in version order (compare fields as integers, not strings)
- * Requires SSH_AGENT to have set a key for access to the remote repository
- */
-def get_releases(repo_url) {
-    // too clever: chain - get branch names, remove prefix, suffix
-    branches = get_remote_branches(repo_url, 'enterprise-*')
-    r = branches.collect { it - 'enterprise-' }.findAll { it =~ /^\d+((\.\d+)*)$/ }
-    // and sort
-    z = sort_versions(r)
-    return z
 }
 
 @NonCPS // because sorting in-line in Jenkins requires NonCPS all the way out
