--- a/jobs/versions/Jenkinsfile
+++ b/jobs/versions/Jenkinsfile
@@ -28,12 +28,15 @@ node(TARGET_NODE) {
     checkout scm
 
     echo "Loading version library"
-    def v = load("jobs/versions/version.groovy")
+    @Library('jobs/versions/version')
+    import version.Version
+    
+    //def v = load("jobs/versions/version.groovy")
 
-    echo "Loading version library tests"
-    def tests = load("jobs/versions/version_test.groovy")
+    //echo "Loading version library tests"
+    //def tests = load("jobs/versions/version_test.groovy")
     
     stage("test versions") {
-        echo "TESTING"
+        echo "TESTING"    
     }
 }
