removed incorrect package files for groovy classes

--- a/jobs/versions/Jenkinsfile
+++ b/jobs/versions/Jenkinsfile
@@ -45,7 +45,7 @@ node(TARGET_NODE) {
         vt.test_pad()
         vt.test_cmp()
 
-        ct.test_increments()
+        vt.test_increments()
         
         echo "END TESTING"
     }
