--- a/jobs/versions/Jenkinsfile
+++ b/jobs/versions/Jenkinsfile
@@ -53,7 +53,7 @@ node(TARGET_NODE) {
         
         echo "END TESTING"
 
-        def v0 = new Version("3.2.1")
+        v0 = new Version("3.2.1")
 
         echo "v0 = ${v0}"
     }
