--- a/jobs/versions/Jenkinsfile
+++ b/jobs/versions/Jenkinsfile
@@ -56,6 +56,7 @@ node(TARGET_NODE) {
         echo "START Creating v0"
         v0 = new Version("3.2.1")
         echo "END Creating v0"
+        echo "v0 = " + v0
 
         v0_string = string v0
 
