stop trying to test increments for the moment.

--- a/jobs/versions/Jenkinsfile
+++ b/jobs/versions/Jenkinsfile
@@ -58,7 +58,8 @@ node(TARGET_NODE) {
         echo "END Creating v0"
         echo "hello0:" + v0
         echo "hello1: ${v0}"
-        echo "hello2:" + v0
+        hello2 = "hello2:" + v0
+        echo hello2
 
         v0_string = string v0
 
