--- a/jobs/versions/Jenkinsfile
+++ b/jobs/versions/Jenkinsfile
@@ -56,7 +56,7 @@ node(TARGET_NODE) {
         echo "START Creating v0"
         v0 = new Version("3.2.1")
         echo "END Creating v0"
-        echo "hello0:" + v0
+        echo "hello0:" + v0.toString()
         echo "hello1: ${v0}"
         echo "hello2.size() = ${hello2.size()}"
         hello2 = "hello2:" + v0
