--- a/jobs/versions/Jenkinsfile
+++ b/jobs/versions/Jenkinsfile
@@ -56,10 +56,10 @@ node(TARGET_NODE) {
         echo "START Creating v0"
         v0 = new Version("3.2.1")
         echo "END Creating v0"
-        echo "hello0:" + v0.toString()
-        echo "hello1: ${v0}"
-        echo "hello2.size() = ${hello2.size()}"
+        echo "hello0: " + v0.toString()
+        echo "hello1: ${v0.toString()}"
         hello2 = "hello2:" + v0
+        echo "hello2.size() = ${hello2.size()}"
         echo hello2
 
         v0_string = string v0
