--- a/jobs/versions/Jenkinsfile
+++ b/jobs/versions/Jenkinsfile
@@ -58,13 +58,14 @@ node(TARGET_NODE) {
         echo "END Creating v0"
         echo "hello0: " + v0.toString()
         echo "hello1: ${v0.toString()}"
-        hello2 = "hello2:" + v0
+        hello2 = 'hello2:' + v0
         echo "hello2.size() = ${hello2.size()}"
         echo "== hello2 =="
         echo hello2
         echo "-- pre --"
         echo "${hello2}"
         echo "-- post--"
+        echo "here is hello2: ${hello2}"
 
         v0_string = v0 as String
         echo "v0_string.size() = ${v0_string.size()}"
