--- a/jobs/versions/Jenkinsfile
+++ b/jobs/versions/Jenkinsfile
@@ -54,31 +54,31 @@ node(TARGET_NODE) {
         
         echo "END TESTING"
 
-        echo "START Creating v0"
-        def v0 = new Version("3.2.1")
-        echo "END Creating v0"
-        echo "inspecting v0: " + v0.inspect()
+        // echo "START Creating v0"
+        // def v0 = new Version("3.2.1")
+        // echo "END Creating v0"
+        // echo "inspecting v0: " + v0.inspect()
         
-        echo "hello0: " + v0.toString()
-        echo "hello1: ${v0.toString()}"
-        echo "hello1a: ${v0}"
-        hello2 = 'hello2:' + v0
-        echo "hello2.size() = ${hello2.size()}"
-        echo "== hello2 =="
-        echo hello2
-        echo "-- pre --"
-        echo "${hello2}"
-        echo "-- post--"
-        echo "here is hello2: ${hello2}"
+        // echo "hello0: " + v0.toString()
+        // echo "hello1: ${v0.toString()}"
+        // echo "hello1a: ${v0}"
+        // hello2 = 'hello2:' + v0
+        // echo "hello2.size() = ${hello2.size()}"
+        // echo "== hello2 =="
+        // echo hello2
+        // echo "-- pre --"
+        // echo "${hello2}"
+        // echo "-- post--"
+        // echo "here is hello2: ${hello2}"
 
-        v0_string = v0 as String
-        echo "v0_string.size() = ${v0_string.size()}"
-        echo "v0_string(inline) = ${v0_string}"
-        echo "v0_string(concat) = " + v0_string
+        // v0_string = v0 as String
+        // echo "v0_string.size() = ${v0_string.size()}"
+        // echo "v0_string(inline) = ${v0_string}"
+        // echo "v0_string(concat) = " + v0_string
         
-        echo "START Creating v1"
-        v1 = new Version("3.9.2")
-        echo "END Creating v1"
+        // echo "START Creating v1"
+        // v1 = new Version("3.9.2")
+        // echo "END Creating v1"
 
     }
     //echo "v0 = ${v0_string}"
