--- a/jobs/openshift/Jenkinsfile
+++ b/jobs/openshift/Jenkinsfile
@@ -144,7 +144,7 @@ def get_releases(repo_url, pattern="enterprise-") {
 def patch_tito(pipeline, package_name) {
     def tito_version = pipeline.sh(
         returnStdout: true,
-        script: "rpm -q --qf "%{VERSION}" tito"
+        script: 'rpm -q --qf "%{VERSION}" tito'
     )
 
     if (tito_version == '0.6.11') {
