--- a/jobs/openshift/Jenkinsfile
+++ b/jobs/openshift/Jenkinsfile
@@ -141,7 +141,7 @@ def get_releases(repo_url, pattern="enterprise-") {
 //
 //
 // ===========================================================================
-def patch_tito(pipeline, package_name) {
+def patch_tito(pipeline) {
     def tito_version = pipeline.sh(
         returnStdout: true,
         script: 'rpm -q --qf "%{VERSION}" tito'
@@ -322,9 +322,8 @@ node(TARGET_NODE) {
 
         stage("tag and push") {
             echo "tag and push"
-            patch_tito(this, package_name)
             dir(package_name) {
-                sh "rpm -q tito"
+                patch_tito(this)
                 sh(
                     script: [
                         "tito tag",
