special scl shell

--- a/jobs/openshift/Jenkinsfile
+++ b/jobs/openshift/Jenkinsfile
@@ -214,8 +214,13 @@ def tito_build(pipeline, package_name)  {
 }
 
 def run_script(shell, collection=null) {
-    def wrapper = collection ? "scl enable ${collection}" : ""
-    return { script -> shell.sh("${wrapper} '${script}'") }
+    if (collection) {
+        echo "running build tools in collection ${collection}"
+        wrapper = "scl enable ${collection}"
+        return { script -> shell.sh("${wrapper} '${script}'") }
+    }
+
+    return { script -> shell.sh script }
 }
 
 // ===========================================================================
@@ -250,7 +255,10 @@ node(TARGET_NODE) {
         script: "rpm -q --quiet go-toolset-7") == 0 ?
         "go-toolset-7" :
         null
-    
+
+    if (collection) {
+        echo "running build tools in collection ${collection}"
+    }
     shell = run_script(this, collection)
     
     releases = get_releases(repo_url, branch_prefix)
