--- a/jobs/openshift/Jenkinsfile
+++ b/jobs/openshift/Jenkinsfile
@@ -304,11 +304,14 @@ node(TARGET_NODE) {
         }
 
         stage("merge upstream") {
-            if (upstream_branch_name in ['stage', 'master']) {
-                dir(package_name) {
-                    sh("git fetch upstream")
-                    sh("git merge upstream/${upstream_branch_name}")
-                }
+            // when fetching master you have to fetch the whole thing
+            def fetch_branch = upstream_branch_name
+            if (upstream_branch_name == 'master']) {
+                fetch_branch = ""
+            }
+            dir(package_name) {
+                sh("git fetch upstream ${fetch_branch}")
+                sh("git merge upstream/${upstream_branch_name}")
             }
         }
         
