--- a/jobs/openshift/Jenkinsfile
+++ b/jobs/openshift/Jenkinsfile
@@ -262,7 +262,7 @@ node(TARGET_NODE) {
         returnStatus: true,
         script: "rpm -q --quiet go-toolset-7") == 0
 
-    if (use_collections and collection_installed) {
+    if (use_collections && collection_installed) {
         collection = 'go-toolset-7'
     } else {
         collection = null
